--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "equation-parser",
   "version": "0.0.0",
   "description": "Parse equations to an AST",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:kgram/equation-parser.git",
   "author": "Kristoffer Gram <kristoffer.gram@gmail.com>",
   "license": "MIT",
@@ -22,6 +22,8 @@
     "@typescript-eslint/parser": "^2.6.0",
     "eslint": "^6.6.0",
     "jest": "^24.8.0",
+    "rollup": "^1.26.3",
+    "rollup-plugin-multi-input": "^1.0.2",
     "typescript": "^3.5.3"
   },
   "babel": {
