--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.7.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
@@ -35,7 +36,7 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-multi-input": "^1.0.2",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.7.2"
   },
   "babel": {
     "presets": [
