Use "prepare" instead of "prepublish" for package lifecycle

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "yarn build:types && yarn build:js",
     "types": "tsc -d --emitDeclarationOnly --outDir dist",
     "bundle": "rollup -c rollup.config.js",
-    "prepublish": "rimraf dist && yarn lint && yarn test && yarn types && yarn bundle"
+    "prepare": "rimraf dist && yarn lint && yarn test && yarn types && yarn bundle"
   },
   "files": [
     "dist"
