--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
-  "repository": "git@github.com:kgram/equation-parser.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kgram/equation-parser.git"
+  },
+  "homepage": "https://github.com/kgram/equation-parser",
   "author": "Kristoffer Gram <kristoffer.gram@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -20,7 +24,7 @@
     "bin"
   ],
   "bin": {
-    "parse-equation": "./scripts/cli"
+    "equation-parser": "./scripts/cli"
   },
   "dependencies": {},
   "devDependencies": {
