--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "equation-parser",
-  "version": "0.3.1",
+  "version": "1.0.0-rc.1",
   "description": "Parse equations to an AST",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
